<resources>
    <string name="app_name">MovieApp</string>
    <string name="conn_error">Connection Error!!</string>
    <string name="mv_title">movie</string>
    <string name="mv_sub_title">Sub Title</string>
    <string name="mv_info">Movie Info</string>
    <string name="release_date">Release Date: </string>
    <string name="rating">Rating: </string>
    <string name="overview">Overview</string>
    <string name="revenue">Revenue: </string>
    <string name="runtime">Runtime : </string>
    <string name="budget">Budget: </string>
    <string name="error_msg">Some Error Occured</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>